fix: overflow

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -18,6 +18,7 @@ $black: #000000;
 
 html {
     background-color: $quaternary-color;
+    overflow: hidden;
 }
 
 html,
